--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -12,3 +12,22 @@
     margin: 10px;
 }
 
+.selected {
+    border: 2px solid blue;
+}
+.standardHand {
+    display: grid;
+    grid-template-columns: 250px 250px 250px 250px;
+    grid-template-rows: 350px 350px 350px;
+    gap: 10px;
+    justify-content: center;
+}
+
+.extendedHand {
+    display: grid;
+    grid-template-columns: 250px 250px 250px 250px 250px;
+    grid-template-rows: 350px 350px 350px;
+    gap: 10px;
+    justify-content: center;
+  }
+
