refactor to React.FC

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -12,6 +12,12 @@
     margin: 10px;
 }
 
+.emptySlot {
+    width: 250px;
+    height: 350px;
+    margin: 10px;
+}
+
 .selected {
     border: 2px solid blue;
 }
