--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,19 +1,28 @@
+.playingCard {
+  width: 250px;
+  height: 350px;
+}
+
 .selected {
-    border: 2px solid blue;
+  border: 2px solid blue;
 }
 .standardHand {
-    display: grid;
-    grid-template-columns: 250px 250px 250px 250px;
-    grid-template-rows: 350px 350px 350px;
-    gap: 15px;
-    justify-content: center;
+  display: grid;
+  grid-template-columns: 250px 250px 250px 250px;
+  grid-template-rows: 350px 350px 350px;
+  gap: 15px;
+  justify-content: center;
 }
 
 .extendedHand {
-    display: grid;
-    grid-template-columns: 250px 250px 250px 250px 250px;
-    grid-template-rows: 350px 350px 350px;
-    gap: 15px;
-    justify-content: center;
-  }
+  display: grid;
+  grid-template-columns: 250px 250px 250px 250px 250px;
+  grid-template-rows: 350px 350px 350px;
+  gap: 15px;
+  justify-content: center;
+}
 
+.foundSets {
+  display: block;
+  width: 300px;
+}
